# podong_automation_project

./: .gitignore  README.md  Test.spec  advanced_mmp.py  bard_test.py  data.xlsx  exception_list.json  file.xlsx  inventory_app.py  main.py  pyproject.toml  test.py  test_simple.py  xlsx_dongdaeng.py
Etc/: eeW.py  test2.py
Product_analytics/: read_product.py
config/: app_settings.json  config.json  exception_list.json  prompt_template.txt
src/: __init__.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  data_processor.py  exception_manager.py  file_manager.py
src/ui/: __init__.py  main_window.py
src/ui/components/: __init__.py  error_handler.py  exception_editor.py
stock_data_preprocessing/: PlotCreater.py  exception_list.py  main_match_preprocessing.py  stock_control.py  stock_match.py
test/: exception_list.json
tools/: build_exe.bat  build_exe.ps1
