[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podong-automation-app"
version = "1.0.0"
description = "포동 재고관리 자동화 앱"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "flet>=0.21.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
